--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:pages": "react-scripts build && cp -R public/ docs/",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
